# DocMind

./: .env.example  .gitignore  ENGINEERING_SPEC.md  LICENSE  README.md  STATUS.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/agents/: base_agent.py
backend/agents/agents/: pr_creator.py  quality_critic.py  reviewer_agent.py  writer_agent.py
backend/api/: config.py
backend/api/middleware/: auth.py  rate_limit.py  request_logging.py
backend/api/routers/: agents.py  auth.py  health.py  integrations.py  projects.py  queries.py  webhooks.py
backend/api/schemas/: auth.py  projects.py  queries.py  webhooks.py
backend/api/services/: auth_service.py  projects_service.py
backend/api/utils/: encryption.py  hmac_utils.py  jwt_utils.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 001_initial_schema.py
backend/mcp_server/: server.py
backend/rag/: dense_search.py  fusion.py  generator.py  pipeline.py  reranker.py  sparse_search.py
backend/shared/: constants.py  exceptions.py  logging_config.py
backend/tests/: conftest.py  test_api_agents.py  test_api_health.py  test_api_projects.py  test_ingestion.py  test_rag.py  test_utils.py  test_webhooks.py
backend/worker/: worker_main.py
backend/worker/ingestion/: chunker.py  embedder.py  full_ingestion.py  incremental_ingestion.py  vector_store.py
backend/worker/ingestion/parsers/: code_parser.py  markdown_parser.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
infrastructure/: docker-compose.yml
(+5 files in other folders)
